python/udemy_boring_stuff_with-python.txt
=== notes udemy python boring stuff : ===

== chapter1 : quick presentation ==

== chapter 2 : expressions datatypes variables : ==

on va travailler avec la version python 3.5 pour les exemples .
on va pouvoir utiliser idle / pycharm / sublimtext 

- expressions :

exemples d'expression :  

>>> 2 + 2
4
>>> 2
2
>>> 5 - 3
2
>>> 3 * 7  
21
>>> 3 X 7   <<< on voit que quand on utilise le X pour la multi on a une erreur 
  File "<stdin>", line 1
    3 X 7
      ^
SyntaxError: invalid syntax

>>> 22 / 7
3.142857142857143

- Ordres des opérations :
-> ce qui est entre parenttheses est evalué en premier
> ensuite les multiplication et les divisions
> ensuite les additions et les soustractions 

>>> 2 + 3 * 6
20
>>> (2 + 3 ) * 6
30
>>> ( 5 - 1 ) * ((7 +1 ) / (3 -1))
16.0

- Data types :

toutes les valeurs  ont un datatype : une catégorie de data 

pour voir le datatype on a une fonction qui nous permet l'identifcation : type(notre_valeur)  

- integer : 
>>> type(2)
<class 'int'>
>>> type(5545)
<class 'int'>
>>> type(-5)
<class 'int'>
>>> type(8.5)

- float(nombre à virgule)
<class 'float'>
>>> type(-45.1)
<class 'float'>

- string : 

>>> 'Hello World!'
'Hello World!

-concatenation :

>>> "bob" + "cool"
'bobcool'

>>> "bob" * 5
'bobbobbobbobbob'
>>> "hello" + "!" * 10
'hello!!!!!!!!!!'


- Variables : 

boite dans laquelle on met une donnée

on a une assignation avec le signe "="

>>> spam = 42
>>> spam
42
>>> spam + "world"
'helloworld'
>>> spam + " world"
'hello world'
>>> spam = 'Yok'
>>> spam + " world"
'Yok world'



= chapter 3 : first progam : =



